@@ -44,8 +44,8 @@
     </distributionManagement>
 
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -57,11 +57,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
-                    <release>19</release>
+                    <source>16</source>
+                    <target>16</target>
+                    <release>16</release>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>-parameters</arg>
                     </compilerArgs>
                     <!-- Maven compiler plugin discovers Soklet's internal annotation processor
@@ -102,7 +101,7 @@
                     <linksource>true</linksource>
                     <show>public</show>
                     <bottom><![CDATA[Copyright 2022 <a href="https://www.revetware.com" target="_blank">Revetware LLC<a>]]></bottom>
-                    <source>19</source>
+                    <source>16</source>
                 </configuration>
             </plugin>
 
